--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ nav ul li a{
 	margin:30px;
 }
 .logo{
-	font-family:RoadTest;
+	font-family: 'RoadTest', sans-serif;;
 	color:#E61717;
 	font-size: 40px;
 }
