--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @charset "utf-8";
 /*CSS DOCUMENT */
 
-@import url('https://fonts.cdnfonts.com/css/roadtest');
+
 
 html {
     scroll-behavior: smooth;
@@ -470,165 +470,188 @@ footer p:nth-child(4){
 	color:#2B2B2B;
 }
 
+
 @media(max-width:1000px){
 	*{
-		box-sizing: border-box;
+	 box-sizing: border-box;
 	}
 	.model{
-		height: 460px;
-		left: 90%;
-		transform: translateX(-90%);
+	 height: 460px;
+	 left: 90%;
+	 transform: translateX(-90%);
 	}
-	.text-container{
-		top:46%;
+	.Text-Container{
+	 top:46%;
 	}
-	.text-container button{
-		margin: 5px;
+	.Text-Container button{
+	 margin: 5px;
 	}
 	.about-container{
-		width:90%;
-		border-radius: 10px;
+	 width:90%;
+	 border-radius: 10px;
 	}
 	.about-container img{
-		height: 200px;
+	 height: 200px;
 	}
 	.about-text{
-		width: 400px;
+	 width: 400px;
 	}
 	.about-text p:nth-child(1){
-		font-size: 20px;
+	 font-size: 20px;
 	}
 	.about-text p:nth-child(2){
-		font-size: 10px;
+	 font-size: 10px;
 	}
 	
 	.about-text p:nth-child(3),
 	.about-text p:nth-child(4){
-		font-size: 14px;
+	 font-size: 14px;
 	}
 	.services{
-		padding: 2% 5% 0px 5%;
+	 padding: 2% 5% 0px 5%;
 	}
-	.box-container{
-		justify-content: center;
-		flex-wrap: wrap;
+	.Box-Container{
+	 justify-content: center;
+	 flex-wrap: wrap;
 	}
 	.services{
-		height: auto;
+	 height: auto;
 	}
 	.box-1,.box-2,.box-3{
-		flex-grow: 1;
-		margin: 10px;
+	 flex-grow: 1;
+	 margin: 10px;
 	}
-	.contact-me{
-		height: 200px;
+	.Contact-Me{
+	 height: 300px;
 	}
-	.contact-me p{
-		font-size: 26px;
+	.Contact-Me p{
+	 text-align: center;
+	 font-size: 10px;
 	}
-	.contact-me button{
-		font-size: 14px;
-		height:35px;
-		width: 160px;
+	.Contact-Me button{
+	 font-size: 14px;
+	 height:35px;
+	 width: 160px;
 	}
-}
 
-@media(max-width:750px){
+	.MyWorks{
+		height: 1100px;
+	}
+   }
+
+   @media(max-width:750px){
 	section{
-		background-image:none;
-		background-color:#f7f7f7;
+	 background-image:none;
+	 background-color:#f7f7f7;
 	}
 	.model{
-		display: none;
+	 display: none;
 	}
 	.toggle{
-		display: block;
+	 display: block;
 	}
-	.text-container p:nth-child(2){
-		line-height: 40px;
-		margin: 0px;
-		padding: 0px;
-		
+	.Text-Container p:nth-child(2){
+	 line-height: 40px;
+	 margin: 0px;
+	 padding: 0px;
+	 
 	}
-	.text-container{
-		top: 50%;
-		left: 50%;
-		transform: translate(-50%,-50%);
-		width: 80%;
+	.Text-Container{
+	 top: 50%;
+	 left: 50%;
+	 transform: translate(-50%,-50%);
+	 width: 80%;
 	}
 	nav ul{
-		margin: 0px;
-		padding: 0px;
-		background-color: #ebeef4;
-		flex-direction: column;
-		position: fixed;
-		left: 0;
-		top: 0;
-		width:100%;
-		height: 100vh;
-		box-sizing: border-box;
-		display: flex;
-		justify-content: center;
-		align-items: center;
-		z-index: 1;
-		display: none;
-		
+	 margin: 0px;
+	 padding: 0px;
+	 background-color: #ebeef4;
+	 flex-direction: column;
+	 position: fixed;
+	 left: 0;
+	 top: 0;
+	 width:100%;
+	 height: 100vh;
+	 box-sizing: border-box;
+	 display: flex;
+	 justify-content: center;
+	 align-items: center;
+	 z-index: 1;
+	 display: none;
+	 
 	}
 	nav ul li{
-		padding: 10px;
+	 padding: 10px;
 	}
 	nav ul li a{
-		font-family:calibri;
-		font-size: 1.4em;
-		text-transform: uppercase;
-		color:#5c5c5c;
+	 font-family: calibri;
+	 font-size: 1.4em;
+	 text-transform: uppercase;
+	 color:#5c5c5c;
 	}
 	nav ul li a:hover{
-		color:#121212;
+	 color:#121212;
 	}
 	.toggle:before{
-		content: '\f0c9';
-		font-family: fontAwesome;
-		line-height: 30px;
-		z-index: 1;
+	 content: '\f0c9';
+	 font-family: fontAwesome;
+	 line-height: 30px;
+	 z-index: 1;
 	}
 	.toggle.active:before{
-		content: '\f00d';
-		position: fixed;
-		right: 25px;
-		line-height: 0px;
-		
+	 content: '\f00d';
+	 position: fixed;
+	 right: 25px;
+	 line-height: 0px;
+	 
 	}
 	nav.active ul{
-		display: flex !important;
+	 display: flex !important;
 	}
 	.about-container{
-		top: 0px;
-		flex-direction: column;
-		width:90%;
-		height: auto;
-		padding: 30px 0px;
-		align-items: center;
+	 top: 0px;
+	 flex-direction: column;
+	 width:90%;
+	 height: auto;
+	 padding: 30px 0px;
+	 align-items: center;
 	}
 	.about-text{
-		width:90%;
-		text-align: center;
+	 width:90%;
+	 text-align: center;
 	}
 	.services-text{
-		width: 100%;
+	 width: 100%;
 	}
-	.contact-me{
-		height: 180px;
+
+	.MyWorks{
+		height: 1600px;
 	}
-	.contact-me p{
-		font-size: 18px;
+
+	.Contact-Me{
+	 height: 400px;
 	}
-	.contact-me button{
-		width: 150px;
-		height: 33px;
+	.Contact-Me p{
+	 text-align: center;
+	 font-size: 14px;
+	 border-bottom: 0px solid black;
+	}
+	.Contact-Me button{
+	 width: 150px;
+	 height: 33px;
 	}
 	footer p:nth-child(2){
+	 width: 90%;
+	}
+
+	footer p:nth-child(3){
+		text-align: center;
+		line-height: 30px;
 		width: 90%;
 	}
 	
-}
+	footer p:nth-child(4){
+	width: 90%;
+	}
+	
+   }
