--- a/style.css
+++ b/style.css
@@ -10,6 +10,14 @@ body{
 	margin:0px;
 	padding:0px;
 }
+
+#animated-background{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: #A8A8A8;
+}
+
 ul{
 	list-style:none;
 }
