--- a/style.css
+++ b/style.css
@@ -14,8 +14,9 @@ body{
 #animated-background{
     position: absolute;
     width: 100%;
-    height: 100%;
+    height: 110%;
     background: #A8A8A8;
+	background-size: cover;
 }
 
 ul{
