--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body{
 }
 
 #animated-background{
-    position: absolute;
+    position: relative;
     width: 100%;
     height: 110%;
     background: #A8A8A8;
@@ -542,7 +542,7 @@ footer p:nth-child(4){
 	}
    }
 
-   @media(max-width:750px){
+   @media(max-width:750px)   {
 	section{
 	 background-image:none;
 	 background-color:#f7f7f7;
@@ -651,6 +651,136 @@ footer p:nth-child(4){
 	footer{
 		height: 900px;
 	}
+	footer p:nth-child(2){
+	 width: 90%;
+	}
+
+	footer p:nth-child(3){
+		text-align: center;
+		line-height: 30px;
+		width: 90%;
+	}
+	
+	footer p:nth-child(4){
+	width: 90%;
+	}
+	
+   }
+
+   @media(max-width:400px)   {
+	section{
+	 background-image:none;
+	 background-color:#f7f7f7;
+	}
+	.model{
+	 display: none;
+	}
+	.toggle{
+	 display: block;
+	}
+	
+	.Text-Container p:nth-child(2){
+	 line-height: 40px;
+	 margin: 0px;
+	 padding: 0px;
+	 
+	}
+	.Text-Container{
+	 top: 50%;
+	 left: 50%;
+	 transform: translate(-50%,-50%);
+	 width: 80%;
+	}
+	nav ul{
+	 margin: 0px;
+	 padding: 0px;
+	 background-color: #ebeef4;
+	 flex-direction: column;
+	 position: fixed;
+	 left: 0;
+	 top: 0;
+	 width:100%;
+	 height: 100vh;
+	 box-sizing: border-box;
+	 display: flex;
+	 justify-content: center;
+	 align-items: center;
+	 z-index: 1;
+	 display: none;
+	 
+	}
+	nav ul li{
+	 padding: 10px;
+	}
+	nav ul li a{
+	 font-family: calibri;
+	 font-size: 1.4em;
+	 text-transform: uppercase;
+	 color:#5c5c5c;
+	}
+	nav ul li a:hover{
+	 color:#ffffff;
+	}
+	.toggle:before{
+	 content: '\f0c9';
+	 font-family: fontAwesome;
+	 line-height: 30px;
+	 z-index: 1;
+	}
+	
+	.toggle.active:before{
+	 content: '\f00d';
+	 position: fixed;
+	 right: 25px;
+	 line-height: 0px;
+	 
+	}
+	nav.active ul{
+	 display: flex !important;
+	}
+	.about-container{
+	 top: 0px;
+	 flex-direction: column;
+	 width:90%;
+	 height: auto;
+	 padding: 30px 0px;
+	 align-items: center;
+	}
+	.about-text{
+	 width:90%;
+	 text-align: center;
+	}
+	.services-text{
+	 width: 100%;
+	}
+
+	.MyWorks{
+		height: 1700px;
+	}
+	.MyWorks p:nth-child(2){
+		font-size: 14px;
+	}
+
+	.Contact-Me{
+	 height: 400px;
+	}
+	.Contact-Me p{
+	 text-align: center;
+	 font-size: 14px;
+	 border-bottom: 0px solid black;
+	}
+	.Contact-Me button{
+	 width: 150px;
+	 height: 33px;
+	}
+
+	footer{
+		height: 1000px;
+	}
+	footer p:nth-child(1){
+	 font-size: 25px;
+	}
+
 	footer p:nth-child(2){
 	 width: 90%;
 	}
